JS_ADVANCED_MODULE_1_homework_1/styles/style.css
/* ... */
.background-second {
    background: url("../assets/img/web/640/category_photo2_640px.png") bottom right / cover no-repeat;
}
.background-third {
    background: url("../assets/img/web/640/category_photo3_640px.png") bottom right / cover no-repeat;
}

.content_first_text {
    color: #3f4043;
    font-size: 20px;
    text-transform: uppercase;
}

.content_second_text {
    font-size: 10px;
    color: #cbccce;
    margin-top: 2px;
}

.food_menu_logo {
    display: none;
}

.content_header {
    margin: 23px auto 0 ;
}

.list {
    margin-top: 11px;
}

.list_header {
    height: 37px;
    line-height: 37px;
    font-size:  20px;
    color: #acd8ad;
    text-transform: uppercase;
    background-color: #3f4043;
    letter-spacing: .7px;
}

.list_header_color {
    color: white;
    background-color: #acd8ad;
}

.list_padding {
    padding: 0 18px;
}

.list_text_category {
    font-size: 15px;
    text-transform: uppercase;
}

.list_icon {
    width: 25px;
    height: 25px;
}

.list_category {
    margin-top: 12px;
    margin-bottom: 16px;
}

.list_element {
    margin-bottom: 11px;
}

.list_element_text {
    font-size: 13px;
    margin-left: 5px;
    position: relative;
}

.list_element_text:before {
    position: absolute;
    content: "";
    top: 50%;
    left: -5px;
    transform: translate(-50%, -50%);
    width: 3px;
    height: 3px;
    background-color: black;
    border-radius: 50%;
}

.list_element_price {
    font-weight: 600;
    font-size: 13px;
}

.list_element_subtext {
    text-align: justify;
    font-size: 8px;
    margin-top: 8px;
    letter-spacing: .5px;
    line-height: 1.2;
}

.list_category_margin {
    margin-top: 17px;
}

.list_item_second {
    margin-top: 32px;
}

.footer {
    height: 55px;
    background-color: #acd8ad;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    margin-top: 50px;
    font-size: 12px;
    color: white;
    line-height: 1.5;
}












/*------------------------------------------------------*/
/*MEDIA QUERIES*/

.wrapper {
    max-width: 320px;
    margin: 0 auto;
    background-color: #fff;
}



@media (min-width : 321px) and (max-width: 640px) {
    .wrapper {
        max-width: 640px;
    }
    .header {
        height: 74px;
    }
    .navigation {
        margin-left: 35px;
        font-size: 24px;
    }
    .burger {
        height: 100%;
        width: 82px;
        line-height: 74px;
        font-size: 26px;
    }
    .hamburger {
        transform: translate(5px,-14px);
    }

    .banner {
        background: url('../assets/img/web/640/header-fon_640px.png') center / cover no-repeat ;
        height: 346px;
        width: 100%;
        padding-top: 25px;
    }
    .banner_text {
        margin-left: 38px;
    }
    .banner_text_first {
        font-size: 36px;
    }
    .banner_text_second {
        font-size: 36px;
        margin-top: 6px;
    }
    .banner_text_web {
        font-size: 24px;
        margin-top: 20px;
    }
    .category_item {
        height: 150px;
        margin-top: 2px;
    }
    .category_text {
        font-size: calc(28px + (36 - 30) * ((100vw - 320px) / (640 - 320)));
    }
    .arrow {
        width: 142px;
        font-size: 35px;
    }
    .content_header {
        margin: 38px auto 0 ;
    }
    .content_first_text {
        font-size: 40px;
    }
    .content_second_text {
        font-size: 20px;
        margin-top: 7px;
    }
    .list {
        margin-top: 20px;
    }
    .list_header {
        height: 75px;
        line-height: 75px;
        font-size:  calc(20px + (40 - 20) * ((100vw - 320px) / (640 - 320)));
    }
    .list_padding {
        padding: 0 38px;
    }
    .list_text_category {
        font-size: 30px;
    }
    .list_icon {
        width: 49px;
        height: 49px;
    }
    .list_category {
        margin-top: 23px;
        margin-bottom: 32px;
    }
    .list_element {
        margin-bottom: 18px;
    }
    .list_element_text {
        font-size: 27px;
        margin-left: 10px;
    }
    .list_element_text:before {
        left: -10px;
    }
    .list_element_price {
        font-size: 26px;
    }
    .list_element_subtext {
        font-size: 17px;
        margin-top: 14px;
    }
    .list_category_margin {
        margin-top: 33px;
    }
    .list_item_second {
        margin-top: 42px;
    }
    .footer {
        height: 97px;
        margin-top: 116px;
        font-size: 18px;
        line-height: 1.65;
    }
    .menu{
        top: 74px;
        width: 210px;
    }
    .menu.active {
        top: 74px;
        width: 243px;
    }
    .menu_item {
        padding: 15px 27px;
        font-size: 14px;
    }

}
/* ... */

